--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -21,6 +21,14 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom:50px;
 }
 
+textarea {
+    width: 100%;
+    height: 5rem;
+	background-color: transparent;
+    padding-top: inherit;
+    margin-top: inherit;
+}
+
 nav i.material-icons {
     vertical-align: middle;
     display: inline-block;
